# rust-functions-example

./: .gitignore  Cargo.toml  Makefile  README.md  netlify.toml  rust-toolchain
.github/: CODEOWNERS
public/: index.html
src/: main.rs
